--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.23",
+    "bcryptjs": "^3.0.3",
+    "jose": "^6.1.3",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "tailwind": "^3.1.0"
   },
   "devDependencies": {
