--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.3",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
+    "mongoose": "^9.1.3",
     "next": "16.1.1",
     "postcss": "^8.5.6",
     "react": "19.2.3",
